<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:background="@drawable/signuppage"
        android:orientation="vertical"
        android:fitsSystemWindows="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/bglogo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="SIGN UP"
            android:textSize="45dp"
            android:fontFamily="@font/intro_rust"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="PLEASE REGISTER NOW"
            android:fontFamily="@font/intro_rust"
            android:textColor="@color/carrentix_red"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="40dp"
            android:hint="@string/hintemail"
            android:textSize="20dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="16dp"
            android:singleLine="true"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/monsterrat"
            android:background="@drawable/back_box_rounded"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="40dp"
            android:hint="@string/hintphone"
            android:textSize="20dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="16dp"
            android:singleLine="true"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/monsterrat"
            android:background="@drawable/back_box_rounded"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="40dp"
            android:hint="@string/usernm"
            android:textSize="20dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="16dp"
            android:singleLine="true"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/monsterrat"
            android:background="@drawable/back_box_rounded"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp">
            <EditText
                android:id="@+id/newpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newpass"
                android:fontFamily="@font/monsterrat"
                android:singleLine="true"
                android:textSize="20dp"
                android:paddingHorizontal="25dp"
                android:paddingVertical="16dp"
                android:layout_marginVertical="8dp"
                android:inputType="textPassword"
                android:background="@drawable/back_box_rounded"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/eye"
                android:layout_marginRight="25dp" />
            <Button
                android:id="@+id/passvisibility"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/selectableItemBackground"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/requi"
            android:textSize="12dp"
            android:paddingHorizontal="24dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp">
            <EditText
                android:id="@+id/confpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conpass"
                android:fontFamily="@font/monsterrat"
                android:singleLine="true"
                android:textSize="20dp"
                android:paddingHorizontal="25dp"
                android:paddingVertical="16dp"
                android:layout_marginVertical="8dp"
                android:inputType="textPassword"
                android:background="@drawable/back_box_rounded"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/eye"
                android:layout_marginRight="25dp" />
            <Button
                android:id="@+id/conpassvisibility"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/selectableItemBackground"/>
        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp">
            <TableRow
                android:gravity="center"
                android:layout_width="match_parent"
                android:paddingHorizontal="5dp"/>

        </TableLayout>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="SIGN UP"
            android:backgroundTint="@color/carrentix_red"
            android:fontFamily="@font/intro_rust"
            android:textSize="20dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginVertical="10dp">
            <TableRow
                android:gravity="center">
                <View
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/carrentix_red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="or"
                    android:textSize="17sp"
                    android:fontFamily="@font/monsterrat"
                    android:textColor="@color/carrentix_red"
                    android:paddingHorizontal="14dp"/>
                <View
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@color/carrentix_red"/>
            </TableRow>
        </TableLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TableRow>
                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:src="@drawable/facebook"/>
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:text="Facebook"
                        android:gravity="center"
                        android:layout_marginEnd="27dp"
                        android:textSize="18dp"
                        android:fontFamily="@font/intro_rust">
                    </TextView>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="8dp"
                        android:src="@drawable/google"/>
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:text="Google"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:fontFamily="@font/intro_rust">
                    </TextView>
                </TableRow>
            </TableLayout>
        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp">
            <TableRow
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already Heave an Account?"
                    android:textSize="15sp"
                    android:fontFamily="@font/monsterrat"/>
                <Button
                    android:id="@+id/login"
                    android:layout_height="29dp"
                    android:layout_width="60dp"
                    android:focusable="true"
                    android:padding="0dp"
                    android:text="Sign In"
                    android:fontFamily="@font/monsterrat"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/carrentix_red"
                    android:clickable="true"
                    android:backgroundTint="@color/white"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>
